--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="google-site-verification" content="LWlcoEeKMgg02wtHav8ZrdokDdqnnSPh4dLn18OHiTM" />
     <meta charset="utf-8" />
+    <meta name="google-site-verification" content="wXM1CBxBnZqu5ECquponS-oI52blb9FXULHd-6d7weg" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
