--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,42 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Bhagirath Devani - React Developer Portfolio"
+      content="Bhagirath Devani - React Developer | Digital Marketing Specialist | Stock Market Analyst"
     />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "@id": "https://bhagirathdevani.com/#person",
+        "name": "Bhagirath Devani",
+        "jobTitle": ["React Developer", "Digital Marketing Specialist", "Stock Market Analyst"],
+        "url": "https://bhagirathdevani.com",
+        "sameAs": [
+          "https://github.com/openheimer9",
+          "https://linkedin.com/in/bhagirathdevani"
+        ],
+        "knowsAbout": [
+          "React.js",
+          "JavaScript",
+          "Digital Marketing",
+          "Stock Market Analysis",
+          "Web Development"
+        ]
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "@id": "https://bhagirathdevani.com/#website",
+        "url": "https://bhagirathdevani.com",
+        "name": "Bhagirath Devani Portfolio",
+        "description": "Portfolio website of Bhagirath Devani - React Developer, Digital Marketing Specialist, and Stock Market Analyst",
+        "publisher": {
+          "@id": "https://bhagirathdevani.com/#person"
+        }
+      }
+    </script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
