--- a/public/index.html
+++ b/public/index.html
@@ -737,28 +737,28 @@
     <div class="time-display" id="timeDisplay"></div>
     
     <div id="root">
-      <main itemScope itemType="http://schema.org/Person">
-        {/* Add this section after your moving banner and before your main content */}
-        <section className="seo-content">
-          <div className="content-wrapper" style={{maxWidth: "1200px", margin: "0 auto", padding: "40px 20px"}}>
-            <h1 style={{fontSize: "2.5rem", marginBottom: "20px"}}>
+      <main itemscope itemtype="http://schema.org/Person">
+        <!-- SEO Content Section -->
+        <section class="seo-content">
+          <div class="content-wrapper" style="max-width: 1200px; margin: 0 auto; padding: 40px 20px">
+            <h1 style="font-size: 2.5rem; margin-bottom: 20px">
               React Developer & Digital Marketing Specialist
             </h1>
             
-            <div className="intro-text" style={{marginBottom: "30px", lineHeight: "1.8"}}>
+            <div class="intro-text" style="margin-bottom: 30px; line-height: 1.8">
               <p>
                 Welcome to my portfolio! I'm Bhagirath Devani, a passionate React Developer and Digital Marketing Specialist based in India. With expertise in creating responsive web applications and implementing effective digital marketing strategies, I help businesses establish a strong online presence and achieve their digital goals.
               </p>
             </div>
 
-            <div className="expertise-summary" style={{marginBottom: "30px"}}>
-              <h2 style={{fontSize: "2rem", marginBottom: "15px"}}>
+            <div class="expertise-summary" style="margin-bottom: 30px">
+              <h2 style="font-size: 2rem; margin-bottom: 15px">
                 Expertise & Services
               </h2>
               <p>
                 Specializing in modern web development technologies and digital marketing solutions, I offer:
               </p>
-              <ul style={{listStyle: "none", padding: "20px 0"}}>
+              <ul style="list-style: none; padding: 20px 0">
                 <li>✓ Custom React.js application development and optimization</li>
                 <li>✓ Responsive web design and mobile-first development</li>
                 <li>✓ SEO optimization and digital marketing strategies</li>
@@ -766,14 +766,14 @@
               </ul>
             </div>
 
-            <div className="why-choose" style={{marginBottom: "30px"}}>
-              <h2 style={{fontSize: "2rem", marginBottom: "15px"}}>
+            <div class="why-choose" style="margin-bottom: 30px">
+              <h2 style="font-size: 2rem; margin-bottom: 15px">
                 Why Work With Me?
               </h2>
               <p>
                 My approach combines technical expertise with marketing insight to deliver solutions that not only look great but also perform exceptionally. Every project benefits from:
               </p>
-              <ul style={{listStyle: "none", padding: "20px 0"}}>
+              <ul style="list-style: none; padding: 20px 0">
                 <li>• Modern development practices and clean code architecture</li>
                 <li>• Performance-optimized applications and websites</li>
                 <li>• Data-driven digital marketing strategies</li>
@@ -781,31 +781,31 @@
               </ul>
             </div>
 
-            <div className="tech-stack" style={{marginBottom: "30px"}}>
-              <h2 style={{fontSize: "2rem", marginBottom: "15px"}}>
+            <div class="tech-stack" style="margin-bottom: 30px">
+              <h2 style="font-size: 2rem; margin-bottom: 15px">
                 Technology Stack
               </h2>
               <p>
                 Leveraging cutting-edge technologies and frameworks including:
               </p>
-              <div style={{display: "flex", flexWrap: "wrap", gap: "10px", padding: "20px 0"}}>
-                <span style={{padding: "5px 15px", background: "var(--primary-color)", color: "white", borderRadius: "20px"}}>React.js</span>
-                <span style={{padding: "5px 15px", background: "var(--primary-color)", color: "white", borderRadius: "20px"}}>JavaScript</span>
-                <span style={{padding: "5px 15px", background: "var(--primary-color)", color: "white", borderRadius: "20px"}}>TypeScript</span>
-                <span style={{padding: "5px 15px", background: "var(--primary-color)", color: "white", borderRadius: "20px"}}>HTML5</span>
-                <span style={{padding: "5px 15px", background: "var(--primary-color)", color: "white", borderRadius: "20px"}}>CSS3</span>
-                <span style={{padding: "5px 15px", background: "var(--primary-color)", color: "white", borderRadius: "20px"}}>Redux</span>
+              <div style="display: flex; flex-wrap: wrap; gap: 10px; padding: 20px 0">
+                <span style="padding: 5px 15px; background: var(--primary-color); color: white; border-radius: 20px">React.js</span>
+                <span style="padding: 5px 15px; background: var(--primary-color); color: white; border-radius: 20px">JavaScript</span>
+                <span style="padding: 5px 15px; background: var(--primary-color); color: white; border-radius: 20px">TypeScript</span>
+                <span style="padding: 5px 15px; background: var(--primary-color); color: white; border-radius: 20px">HTML5</span>
+                <span style="padding: 5px 15px; background: var(--primary-color); color: white; border-radius: 20px">CSS3</span>
+                <span style="padding: 5px 15px; background: var(--primary-color); color: white; border-radius: 20px">Redux</span>
               </div>
             </div>
 
-            <div className="industries-served" style={{marginBottom: "30px"}}>
-              <h2 style={{fontSize: "2rem", marginBottom: "15px"}}>
+            <div class="industries-served" style="margin-bottom: 30px">
+              <h2 style="font-size: 2rem; margin-bottom: 15px">
                 Industries Served
               </h2>
               <p>
                 Providing expert solutions across various sectors including:
               </p>
-              <ul style={{listStyle: "none", padding: "20px 0"}}>
+              <ul style="list-style: none; padding: 20px 0">
                 <li>🏢 E-commerce and Retail</li>
                 <li>💼 Financial Services</li>
                 <li>🎓 Education Technology</li>
@@ -813,8 +813,8 @@
               </ul>
             </div>
 
-            <div className="commitment" style={{marginBottom: "30px"}}>
-              <h2 style={{fontSize: "2rem", marginBottom: "15px"}}>
+            <div class="commitment" style="margin-bottom: 30px">
+              <h2 style="font-size: 2rem; margin-bottom: 15px">
                 My Commitment
               </h2>
               <p>
@@ -822,59 +822,59 @@
               </p>
             </div>
 
-            <div className="call-to-action" style={{textAlign: "center", padding: "30px 0"}}>
-              <h2 style={{fontSize: "2rem", marginBottom: "15px"}}>
+            <div class="call-to-action" style="text-align: center; padding: 30px 0">
+              <h2 style="font-size: 2rem; margin-bottom: 15px">
                 Ready to Start Your Project?
               </h2>
-              <p style={{marginBottom: "20px"}}>
+              <p style="margin-bottom: 20px">
                 Let's collaborate to create something amazing for your business. Contact me today to discuss your project requirements.
               </p>
             </div>
           </div>
         </section>
 
-        {/* Hero Section */}
-        <section className="hero-section">
-          <h1 itemProp="name">Bhagirath Devani</h1>
-          <p itemProp="description" className="lead">
+        <!-- Hero Section -->
+        <section class="hero-section">
+          <h1 itemprop="name">Bhagirath Devani</h1>
+          <p itemprop="description" class="lead">
             Experienced React Developer & Digital Marketing Specialist with expertise in creating high-performance web applications and implementing effective SEO strategies.
           </p>
         </section>
 
-        {/* Add this after the hero-section div and before the skills-section */}
-        <div className="seo-content-section fade-in">
-          <div className="content-wrapper">
-            <div className="expertise-overview">
-              <h2 className="section-header scroll-animation">Full-Stack Development & Digital Marketing</h2>
-              <p className="scroll-animation">
+        <!-- SEO Content Section -->
+        <div class="seo-content-section fade-in">
+          <div class="content-wrapper">
+            <div class="expertise-overview">
+              <h2 class="section-header scroll-animation">Full-Stack Development & Digital Marketing</h2>
+              <p class="scroll-animation">
                 As a seasoned React Developer and Digital Marketing Specialist, I bring a unique blend of technical expertise and marketing acumen to every project. My approach focuses on creating high-performance web applications that not only deliver exceptional user experiences but also drive measurable business results.
               </p>
             </div>
 
-            <div className="services-overview scroll-animation">
+            <div class="services-overview scroll-animation">
               <h3>Comprehensive Solutions</h3>
-              <div className="services-grid">
-                <div className="service-item">
-                  <i className="fas fa-code"></i>
+              <div class="services-grid">
+                <div class="service-item">
+                  <i class="fas fa-code"></i>
                   <h4>Custom React Development</h4>
                   <p>Building scalable, responsive web applications with modern React.js practices and optimal performance.</p>
                 </div>
-                <div className="service-item">
-                  <i className="fas fa-search"></i>
+                <div class="service-item">
+                  <i class="fas fa-search"></i>
                   <h4>SEO Optimization</h4>
                   <p>Implementing proven SEO strategies to improve visibility and drive organic traffic to your website.</p>
                 </div>
-                <div className="service-item">
-                  <i className="fas fa-chart-line"></i>
+                <div class="service-item">
+                  <i class="fas fa-chart-line"></i>
                   <h4>Market Analysis</h4>
                   <p>Providing in-depth stock market analysis and investment strategies based on technical and fundamental research.</p>
                 </div>
               </div>
             </div>
 
-            <div className="approach-section scroll-animation">
+            <div class="approach-section scroll-animation">
               <h3>My Approach</h3>
-              <ul className="approach-list">
+              <ul class="approach-list">
                 <li>✓ User-centric design and development</li>
                 <li>✓ Performance-optimized applications</li>
                 <li>✓ Data-driven marketing strategies</li>
@@ -884,30 +884,30 @@
           </div>
         </div>
 
-        {/* Expertise Section */}
-        <section className="expertise-section">
+        <!-- Expertise Section -->
+        <section class="expertise-section">
           <h2>Areas of Expertise</h2>
-          <div className="expertise-grid">
-            <article className="expertise-card">
+          <div class="expertise-grid">
+            <article class="expertise-card">
               <h3>React Development</h3>
               <p>Building scalable and performant web applications using React.js and modern JavaScript.</p>
             </article>
-            <article className="expertise-card">
+            <article class="expertise-card">
               <h3>Digital Marketing</h3>
               <p>Implementing comprehensive digital marketing strategies to drive growth and engagement.</p>
             </article>
-            <article className="expertise-card">
+            <article class="expertise-card">
               <h3>Stock Market Analysis</h3>
               <p>Providing detailed market analysis and investment strategies based on technical and fundamental research.</p>
             </article>
           </div>
         </section>
 
-        {/* Services Section */}
-        <section className="services-section">
+        <!-- Services Section -->
+        <section class="services-section">
           <h2>Services Offered</h2>
-          <div className="services-grid">
-            <article className="service-card">
+          <div class="services-grid">
+            <article class="service-card">
               <h3>Web Development</h3>
               <ul>
                 <li>Custom React Applications</li>
@@ -916,7 +916,7 @@
                 <li>Progressive Web Apps</li>
               </ul>
             </article>
-            <article className="service-card">
+            <article class="service-card">
               <h3>Digital Marketing</h3>
               <ul>
                 <li>SEO Optimization</li>
@@ -928,54 +928,54 @@
           </div>
         </section>
 
-        {/* Blog Section */}
-        <section className="blog-section">
+        <!-- Blog Section -->
+        <section class="blog-section">
           <h2>Latest Insights</h2>
-          <div className="blog-grid">
-            <article className="blog-post">
+          <div class="blog-grid">
+            <article class="blog-post">
               <h3>React Performance Optimization Tips</h3>
               <p>Learn about the latest techniques for optimizing React applications...</p>
             </article>
-            <article className="blog-post">
+            <article class="blog-post">
               <h3>SEO Strategies for 2024</h3>
               <p>Discover the most effective SEO strategies for improving visibility...</p>
             </article>
           </div>
         </section>
 
-        {/* Testimonials Section */}
-        <section className="testimonials-section">
+        <!-- Testimonials Section -->
+        <section class="testimonials-section">
           <h2>Client Testimonials</h2>
-          <div className="testimonials-grid">
-            <blockquote className="testimonial">
+          <div class="testimonials-grid">
+            <blockquote class="testimonial">
               <p>Working with Bhagirath was an excellent experience. His expertise in React and SEO helped our project succeed.</p>
               <cite>- John Doe, CEO at TechCorp</cite>
             </blockquote>
           </div>
         </section>
 
-        {/* FAQ Section */}
-        <section className="faq-section">
+        <!-- FAQ Section -->
+        <section class="faq-section">
           <h2>Frequently Asked Questions</h2>
-          <div className="faq-grid">
-            <article className="faq-item">
+          <div class="faq-grid">
+            <article class="faq-item">
               <h3>What technologies do you specialize in?</h3>
               <p>I specialize in React.js, JavaScript, TypeScript, and modern frontend development tools...</p>
             </article>
-            <article className="faq-item">
+            <article class="faq-item">
               <h3>How can I improve my website's SEO?</h3>
               <p>I offer comprehensive SEO audits and optimization strategies...</p>
             </article>
-            {/* Add more FAQ items */}
           </div>
         </section>
 
-        <section className="contact-section" itemScope itemType="http://schema.org/ContactPoint">
+        <!-- Contact Section -->
+        <section class="contact-section" itemscope itemtype="http://schema.org/ContactPoint">
           <h2>Get in Touch</h2>
-          <div className="contact-info">
-            <p itemProp="email">Email: contact@bhagirathdevani.com</p>
-            <p itemProp="telephone">Phone: [Your Phone Number]</p>
-            <p itemProp="location">Location: [Your Location]</p>
+          <div class="contact-info">
+            <p itemprop="email">Email: contact@bhagirathdevani.com</p>
+            <p itemprop="telephone">Phone: [Your Phone Number]</p>
+            <p itemprop="location">Location: [Your Location]</p>
           </div>
         </section>
       </main>
