--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0481S2B0M9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0481S2B0M9');
+</script>
     <meta charset="utf-8" />
     <link rel="canonical" href="https://bhagirathportfolio.netlify.app/" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
